[package]
version = "0.1.0"
name = "timer"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Karthik <extrav@protonmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
enclose ="1.1.8"
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"


[dependencies.web-sys]
version = "0.3.5"
features = [
  'console',
  'CssStyleDeclaration',
  'Document',
  'DomStringMap',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlBodyElement',
  'HtmlElement',
  'HtmlInputElement',
  'KeyboardEvent',
  'Location',
  'Node',
  'NodeList',
  'Storage',
  'Window',
]









[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
